...
                        actions: [
                          TextButton(
                            onPressed: () {
                              Navigator.pushNamed(context, "/last");
                            },
                            child: Text(
                              "Yes",
                              style: TextStyle(
                                fontSize: 20,
                                color: Colors.blue,
                              ),
                            ),
                          ),
...
                color: index == 16 ? Colors.blue : Colors.black,
                borderRadius: BorderRadius.circular(16),
              ),
              child: Row(
                children: [
                  Text(
                    index == 16 ? "Finally, you found me.\nClick here!" : "Learn Patrol ${index + 1}",
                    style: TextStyle(
                      color: Colors.white,
                      fontWeight: FontWeight.bold,
                      fontSize: 20,
                    ),
                  ),
...
