...
                    setState(() {
                      isButtonClicked = true;
                    });
                  }
                },
                child: Text(
                  "Fetch the contacts",
                  style: TextStyle(
                    fontSize: 20,
                    fontWeight: FontWeight.bold,
                    color: Colors.black,
                  ),
                ),
...
